.provarCaches/00D410000011HE0EAM/objects/rstk__somsac__c.object
<CustomObject>
    <customHelpPage>rstk__objecthelp_somsac</customHelpPage>
    <description>somsac__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>externalid</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__somsac_somsa__r.rstk__externalid__c &amp;&apos;_&apos;&amp;  TEXT(rstk__somsac_seq__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__somsac_somsa__r.Name &amp;&apos;-&apos;&amp;  TEXT(rstk__somsac_seq__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__somsac_chgcomment__c</fullName>
        <label>Change Comment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__somsac_clause__c</fullName>
        <inlineHelpText>Required user-defined field, containing the textual content for this Clause.</inlineHelpText>
        <label>Clause Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>rstk__somsac_currev__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>System assigned Revision.  Revision is initialized to 1 on an add, and incremented as MSA Clause records are modified.</inlineHelpText>
        <label>Current Revision</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__somsac_deletable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, indicates that the Clause can be deleted (from a Customer MSA) when used on a Customer MSA.</inlineHelpText>
        <label>Clause can be Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__somsac_deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, indicates that this Clause has been flagged as deleted and cannot be used going forward.</inlineHelpText>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__somsac_desc__c</fullName>
        <inlineHelpText>User-define alpha-numeric optional description up to 100 characters in length.</inlineHelpText>
        <label>Clause Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__somsac_div__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Sales Division for which this Master Services Agreement Clause applies.</inlineHelpText>
        <label>Sales Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>MSA Clause</relationshipLabel>
        <relationshipName>somsacs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__somsac_editable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, allows the editing of this Clause Content when used on a Customer MSA.</inlineHelpText>
        <label>Clause Content can be Edited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__somsac_revdate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <inlineHelpText>The date of the latest Revision.</inlineHelpText>
        <label>Current Revision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__somsac_seq__c</fullName>
        <inlineHelpText>The sequence number drives the order in which MSA Clauses will be presented. Sequence can be auto-set or set when adding clauses. Once set, they can&apos;t be changed (without deleting &amp; re-adding). Suggest sequences of 10, 20, 30 etc. so there is room to add.</inlineHelpText>
        <label>MSA Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__somsac_somsa__c</fullName>
        <inlineHelpText>The Master Services Agreement that this Claus is associated with.</inlineHelpText>
        <label>Master Services Agreement</label>
        <referenceTo>rstk__somsa__c</referenceTo>
        <relationshipLabel>MSA Clause</relationshipLabel>
        <relationshipName>somsacs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__somsac_title__c</fullName>
        <inlineHelpText>Required field, user-defined alpha numeric value up to 50 characters in length.</inlineHelpText>
        <label>Clause Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Template MSA Clause</label>
    <listViews>
        <fullName>rstk__RS_Template_MSA_Clause</fullName>
        <columns>NAME</columns>
        <columns>rstk__somsac_div__c</columns>
        <columns>rstk__somsac_somsa__c</columns>
        <columns>rstk__somsac_title__c</columns>
        <columns>rstk__somsac_desc__c</columns>
        <columns>rstk__somsac_seq__c</columns>
        <columns>rstk__somsac_clause__c</columns>
        <columns>rstk__somsac_editable__c</columns>
        <columns>rstk__somsac_deletable__c</columns>
        <columns>rstk__somsac_currev__c</columns>
        <columns>rstk__somsac_revdate__c</columns>
        <columns>rstk__somsac_chgcomment__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Template MSA Clause</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>MSA Clause</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Template MSA Clause</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>rstk__Clause_Title_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(rstk__somsac_title__c)</errorConditionFormula>
        <errorMessage>Clause Title is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Clause_content_required</fullName>
        <active>true</active>
        <errorConditionFormula>LEN(rstk__somsac_clause__c) == 0</errorConditionFormula>
        <errorMessage>Clause Content cannot be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Division_Required</fullName>
        <active>true</active>
        <description>Division is required</description>
        <errorConditionFormula>ISBLANK(rstk__somsac_div__c)</errorConditionFormula>
        <errorMessage>Sales Division is Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__MSA_Should_Belong_to_Division</fullName>
        <active>true</active>
        <description>Master Service Agreement should belong to the same division</description>
        <errorConditionFormula>rstk__somsac_somsa__r.rstk__somsa_div__c != rstk__somsac_div__c</errorConditionFormula>
        <errorMessage>Master Service Agreement should belong to the same division</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__MSA_required_in_new_mode</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISNEW(), ISBLANK(rstk__somsac_somsa__c))</errorConditionFormula>
        <errorMessage>Master Service Agreement is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__MSA_seq_required_and_greater_than_0</fullName>
        <active>true</active>
        <errorConditionFormula>OR(ISBLANK(rstk__somsac_seq__c),rstk__somsac_seq__c &lt;= 0)</errorConditionFormula>
        <errorMessage>MSA Sequence is required and must be greater than 0</errorMessage>
    </validationRules>
</CustomObject>